--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,9 +5,6 @@
 @font-face {
   font-family: ProximaVara;
   src: url("./fonts/font.woff");
+  -webkit-font-smoothing: none !important;
+  font-feature-settings: "ss04" on, "ss03" on;
 }
-
-/* body {
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-} */
